# JTGE

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/example/: CMakeLists.txt
doc/example/simple_game/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
doc/puml/: class_general.puml
scripts/: build_linux.sh
source/: CMakeLists.txt
source/include/JTGE/: Engine.hpp  IGameCore.hpp  Test.hpp
source/include/JTGE/Renderer/: IRenderer.hpp
source/private/include/: InternalTest.hpp
source/private/include/Renderer/: TerminalRenderer.hpp
source/private/source/: Engine.cpp  InternalTest.cpp  Test.cpp
source/private/source/Renderer/linux/: TerminalRenderer.cpp
source/private/source/Renderer/win32/: TerminalRenderer.cpp
